--- a/package.json
+++ b/package.json
@@ -3,9 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "prop-types": "^15.6.2",
     "react": "^16.5.0",
+    "react-abc": "^0.4.0",
     "react-dom": "^16.5.0",
-    "react-scripts": "1.1.5"
+    "react-piano": "^1.1.0",
+    "react-scripts": "1.1.5",
+    "soundfont-player": "^0.10.7"
   },
   "scripts": {
     "start": "react-scripts start",
