--- a/package.json
+++ b/package.json
@@ -6,8 +6,11 @@
     "prop-types": "^15.6.2",
     "react": "^16.5.0",
     "react-abc": "^0.4.0",
+    "react-actioncable-provider": "^1.0.3",
     "react-dom": "^16.5.0",
     "react-piano": "^1.1.0",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.5",
     "soundfont-player": "^0.10.7"
   },
